Redesign the user controlled PLMN feature
Move and redesign the user controlled PLMN list feature
to "Settings" process to align to Google AOSP implementation.
1. Add two activities for user to search and edit PLMN.
2. Read/Write PLMN and Access technology from extphone service.

CRs-Fixed: 2638893
Change-Id: I1f6dfa355811bd10a5d93b2c4a6a16571f996feb

--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -4896,4 +4896,16 @@
     <string name="rom_total_size">机身存储</string>
     <string name="software_version">软件版本</string>
     <string name="model_hardware_summary">"型号:%1$s; 硬件:%2$s"</string>
+    <!-- UPLMN Preference -->
+    <string name="uplmn_list_setting_title">用户控制PLMN</string>
+    <string name="network_id">网络 ID</string>
+    <string name="dialog_network_priority_title">优先级</string>
+    <string name="uplmn_list_setting_add_plmn">新增 PLMN</string>
+    <string name="gsm_umts_network_preferences_title">网络模式</string>
+    <string name="gsm_umts_network_preferences_dialogtitle">网络模式</string>
+    <string name="voicemail_number_not_set">"&lt;未设置&gt;"</string>
+    <string name="reading_settings">"正在读取设置..."</string>
+    <string name="updating_settings">"正在更新设置..."</string>
+    <string name="uplmn_list_setting_summary">"定义PLMN的偏好顺序"</string>
+    <string name="plmn_failure_radio_off">选网失败，原因天线未打开或不可达</string>
 </resources>
