--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12001,6 +12001,19 @@
     <!-- Subtext for showing the option of RTT setting. [CHAR LIMIT=NONE] -->
     <string name="rtt_settings_always_visible"></string>
 
+    <!-- Strings for user PLMN setting. [CHAR LIMIT=NONE] -->
+    <string name="uplmn_settings_title">User Controlled PLMN</string>
+    <string name="network_id">Network ID</string>
+    <string name="dialog_network_priority_title">Priority</string>
+    <string name="uplmn_list_setting_add_plmn">New PLMN</string>
+    <string name="gsm_umts_network_preferences_title">Network Mode</string>
+    <string name="gsm_umts_network_preferences_dialogtitle">Network Mode</string>
+    <string name="voicemail_number_not_set">&lt;Not set&gt;</string>
+    <string name="reading_settings">Reading settings\u2026</string>
+    <string name="updating_settings">Updating settings\u2026</string>
+    <string name="uplmn_settings_summary">Define the preferred PLMNs in priority order</string>
+    <string name="plmn_failure_radio_off">Selecting network failure due to radio OFF or unavailable</string>
+
     <!-- Button label to stop casting on media device. [CHAR LIMIT=40 -->
     <string name="media_output_panel_stop_casting_button">Stop casting</string>
 
