--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -903,13 +903,13 @@
     <!-- Button that takes the user to the enrollment activity [CHAR LIMIT=20] -->
     <string name="security_settings_face_enroll_education_start">Start</string>
     <!-- Button shown which shows accessibility toggles for face enrollment when clicked. [CHAR LIMIT=32] -->
-    <string name="security_settings_face_enroll_introduction_accessibility">Use accessibility setup</string>
+    <string name="security_settings_face_enroll_introduction_accessibility">Setup for limited vision or head motion</string>
     <!-- Additional details shown when the accessibility toggle is expanded. [CHAR LIMIT=NONE]-->
-    <string name="security_settings_face_enroll_introduction_accessibility_expanded"></string>
+    <string name="security_settings_face_enroll_introduction_accessibility_expanded">If you have limited vision or head motion, this option is an easier way to set up face unlock. When using face unlock, your head may need to be more directly in front of your phone.</string>
     <!-- Message shown for a toggle which when enabled, allows the user to enroll using a simpler flow for accessibility [CHAR LIMIT=NONE] -->
-    <string name="security_settings_face_enroll_introduction_accessibility_diversity"></string>
+    <string name="security_settings_face_enroll_introduction_accessibility_diversity">Use accessibility face unlock</string>
     <!-- Message shown for a toggle which when enabled, allows the user to enroll using a simpler flow for accessibility [CHAR LIMIT=NONE] -->
-    <string name="security_settings_face_enroll_introduction_accessibility_vision"></string>
+    <string name="security_settings_face_enroll_introduction_accessibility_vision">Require eyes open</string>
     <!-- Button text to cancel enrollment from the introduction [CHAR LIMIT=22] -->
     <string name="security_settings_face_enroll_introduction_cancel">Cancel</string>
     <!-- Button text to cancel enrollment [CHAR LIMIT=30] -->
@@ -919,7 +919,7 @@
     <!-- Button text to scroll to the end of a scrollview. [CHAR LIMIT=30] -->
     <string name="security_settings_face_enroll_introduction_more">More</string>
     <!-- Introduction title shown in face enrollment to introduce the face unlock feature [CHAR LIMIT=40] -->
-    <string name="security_settings_face_enroll_introduction_title">Unlock with your face</string>
+    <string name="security_settings_face_enroll_introduction_title">Set up face unlock</string>
     <!-- Introduction title shown in face enrollment to introduce the face unlock feature, when face unlock is disabled by device admin [CHAR LIMIT=60] -->
     <string name="security_settings_face_enroll_introduction_title_unlock_disabled">Use your face to authenticate</string>
     <!-- Introduction detail message shown in face enrollment dialog [CHAR LIMIT=NONE]-->
@@ -929,13 +929,13 @@
     <!-- Introduction detail message shown in face enrollment screen in setup wizard. [CHAR LIMIT=NONE] -->
     <string name="security_settings_face_enroll_introduction_message_setup">Use your face to unlock your phone, authorize purchases, or sign in to apps</string>
     <!-- Introduction message shown in face enrollment that provides extra detail. [CHAR LIMIT=NONE] -->
-    <string name="security_settings_face_enroll_introduction_footer_part_0"></string>
+    <string name="security_settings_face_enroll_introduction_footer_part_0">Glasses or lightly tinted sunglasses are OK.</string>
     <!-- Introduction message shown in face enrollment that provides extra detail. [CHAR LIMIT=NONE] -->
-    <string name="security_settings_face_enroll_introduction_footer_part_1"></string>
+    <string name="security_settings_face_enroll_introduction_footer_part_1">The data recorded by face unlock is stored securely and never leaves your phone. You can delete your data anytime in settings.\10\10Your phone will occasionally use your recent face unlock images to create improved face models.</string>
     <!-- Introduction message shown in face enrollment that provides extra detail. [CHAR LIMIT=NONE] -->
-    <string name="security_settings_face_enroll_introduction_footer_part_2"></string>
+    <string name="security_settings_face_enroll_introduction_footer_part_2">Looking at the phone can unlock it even when you don’t intend to. Your phone can be unlocked by someone else if it’s held up to your face.\10\10You can require your eyes to be open for unlocking in Settings.</string>
     <!-- Introduction message shown in face enrollment that provides extra detail. [CHAR LIMIT=NONE] -->
-    <string name="security_settings_face_enroll_introduction_footer_part_3"></string>
+    <string name="security_settings_face_enroll_introduction_footer_part_3">Your phone can be unlocked by someone who looks a lot like you, say, an identical sibling.</string>
     <!-- Title shown in face enrollment dialog [CHAR LIMIT=40] -->
     <string name="security_settings_face_enroll_repeat_title">Center your face in the circle</string>
     <!-- Button text to skip enrollment of face [CHAR LIMIT=40] -->
